# metadata-augmentation

./: .gitattributes  .gitignore  .gitlab-ci.yml  CITATION.cff  Dockerfile  LICENSE  README.md  requirements.txt
CI/: .element-match.yaml  .keyword-match-temp.yaml
NER augmentation/: 20240821_Augmentation_Update NER Location.pptx  GliNER_augmenter.py  Sandbox_Arena.ipynb  app_manual_annotate.py  app_zero_shot_NER.py  environment_NER.yml  evaluatie prompts.txt  requirements.txt  training_data.pkl
RORCIDmatcher/: README.md  process.py
bonares-attributes/: process.py
completeness/: README.md  validate.py
deduplication/: identify-duplicates.py
docs/: design.md  design_NER_augmentation.md  design_deduplication.md  design_hvDatasets.md  design_keyword_matcher.md  (+3 more)
high-value-dataset/: bbox_analyses.ipynb  bbox_classifier.py  eu_terms_and_countries.py  exploring_records.ipynb  mcf_parser.py  pyproject.toml  spatial_coverage.py  spatial_coverage_analyses.ipynb  test_bbox_classifier.py
high-value-dataset/Investigations/: Sandbox_get_DOI.py  Sandbox_get_DOI_stats.ipynb
high-value-dataset/Investigations/SWR_copy/: cited_by_results_1.ndjson  cited_by_results_2.ndjson  cited_by_results_3.ndjson  cited_by_results_4.ndjson  cited_by_results_5.ndjson  cited_by_results_6.ndjson  cited_by_results_latest.ndjson  data-1763545252906.csv  epsg_matches.csv
high-value-dataset/Investigations/utils/: doi_check.py
high-value-dataset/docs/: bbox-classifier-flowchart.md
high-value-dataset/docs/adr/: 0001-bbox-classifier-design-choices.md  0002-spatial-coverage.md  Readme_bbox.md
(+150 files in other folders)
