[project]
name = "high-value-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
    "upsetplot>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
